--- a/style.css
+++ b/style.css
@@ -13,6 +13,47 @@ body
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #222;
+    padding: 20px 0;
+    text-align: center;
+    z-index: 1;
+}
+
+.navbar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.navbar ul li {
+    display: inline;
+    margin: 0 20px;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    transition: color 0.3s ease;
+}
+
+.navbar ul li a:hover {
+    color: rgb(108, 68, 183);
+}
+
+.cube-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 110%;
     background: #050505;
 }
 
