--- a/style.css
+++ b/style.css
@@ -72,9 +72,9 @@ body
 
 .logo {
     position: absolute;
-    top: 10px; /* Adjust the top position as needed */
-    left: 10px; /* Adjust the left position as needed */
-    border-radius: 50%; /* Make it a circle */
+    top: 10px;
+    left: 10px; 
+    border-radius: 50%;
     z-index: 2;
     width: 45px;
 }
