--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ body
     100% { transform: rotate(360deg); }
 }
 
+/* Credits Here : https://codepen.io/marcell0lopes/pen/oNemQmB --> */
 .main{
   height:100vh;
   width:100%;  
