--- a/about.css
+++ b/about.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunigto+Sans:opsz@6..12&family=Space+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Space+Mono&display=swap');
 *
 {
     margin: 0;
@@ -13,7 +13,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 130vh;
     background-color: #fff;
     background-repeat: no-repeat;
     background-size: cover;
@@ -72,9 +72,9 @@ body
 
 .logo {
     position: absolute;
-    top: 10px; 
+    top: 10px;
     left: 10px; 
-    border-radius: 50%; 
+    border-radius: 50%;
     z-index: 2;
     width: 45px;
 }
@@ -89,109 +89,51 @@ body
     100% { transform: rotate(360deg); }
 }
 
-/* Credits : https://codepen.io/Tuna_/pen/KKzXEVO */
-
-*,
-*::before,
-*::after{
-  margin:0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-section {
-  width: 100%;
-  height: 100vh;
-  background-color: #fff;
+.cards-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column; /* Make the two .cards vertical */
+  align-items: center; /* Center the .cards horizontally */
 }
 
-.container{
-  width: 100%;
-  max-width: 80rem;
+.cards {
+  max-width: 1100px;
   margin: 0 auto;
-  padding: 0;
+  text-align: center;
+  padding: 30px;
+  flex-direction: column;
+  display: flex;
 }
 
-.accordion-item{
-  background-color: #fff;
-  border-radius: .4rem;
-}
-
-.accordion-item hr{
-  border: 1px solid #000;
-}
-
-.accordion-link{
-  font-size: 1.6rem;
-  color: #573393;
-  text-decoration: none;
-  background-color: #fff;
-  width: 100%;
+.services {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 1rem 0;
 }
 
-.accordion-link h3{
-  font-weight:500;
-  font-size: 20px;
-}
-
-.accordion-link i{
-  color: #000;
-  padding: .5rem;
-  
-}
-
-.accordion-link ul{
-  display:flex;
-  align-items: flex-end;
-  list-style-type: none;
-  margin-left: 25px;
-}
-
-.accordion-link li{
-  font-size: 10px;
-  color: #000;
-  padding: 0 0 1px 5px;
-}
-
-.accordion-link div{
+.content {
   display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 3px;
 }
 
-.accordion-link .ion-md-arrow-down{
-  display: none;
+.content > * {
+  flex: 1 1 100%;
 }
 
-.answer{
-  max-height: 0;
-  overflow: hidden;
-  position: relative;
-  background-color: #fff;
-  transition: max-height 650ms;
-  text-align: center;
+.cards:nth-child(2){
+  margin-top: -55px;
 }
 
-.answer p{
-  color: #000;
-  font-size: 20px;
-  padding: 2rem;
-  display: inline-block;
+@media (max-width: 900px) {
+  .services {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.accordion-item:target .answer{
-  max-height: 20rem;
-}
-
-.accordion-item:target .accordion-link .ion-md-arrow-forward{
-  display: none
-}
-
-.accordion-item:target .accordion-link .ion-md-arrow-down{
-  display: block;
+hr{
+  height: 1px;
 }
