--- a/about.css
+++ b/about.css
@@ -36,7 +36,7 @@ body
     align-items: center;
     justify-content: center;
     padding: 0 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     background-color: #573393;
 }
 
@@ -148,4 +148,18 @@ hr {
   width: 100px;
   height: auto; 
   border-radius: 50%;
+}
+
+footer {
+  background-color: #17171d;
+  padding: 20px 0;
+  min-width: none;
+  width: 100%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.footer-container {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
 }
