--- a/about.css
+++ b/about.css
@@ -153,7 +153,7 @@ hr {
 footer {
   background-color: #17171d;
   padding: 20px 0;
-  min-width: none;
+  min-width: 110%;
   width: 100%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
