--- a/about.css
+++ b/about.css
@@ -152,9 +152,12 @@ hr {
 
 footer {
   background-color: #17171d;
-  padding: 20px 0;
-  min-width: 110%;
-  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 13.5%;
+  padding-left: 13.5%;
+  min-width: 100%;
+  width: 110%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
