--- a/styles/about.css
+++ b/styles/about.css
@@ -150,17 +150,8 @@ hr {
   border-radius: 50%;
 }
 
-
-footer {
-  background-color: #17171d;
-  padding: 20px 0;
-  min-width: none;
-  width: 100%;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-}
-
-.footer-container {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-evenly;
+@media (max-width: 800px) {
+  .navbar a {
+    font-size: 17px !important;
+  }
 }
