--- a/styles/resources.css
+++ b/styles/resources.css
@@ -150,19 +150,8 @@ hr {
   border-radius: 50%;
 }
 
-footer {
-  background-color: #17171d;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 12%;
-  padding-left: 12%;
-  min-width: 100%;
-  width: 110%;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-}
-
-.footer-container {
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-around;
+@media (max-width: 800px) {
+  .navbar a {
+    font-size: 17px !important;
+  }
 }
