--- a/styles/macos.css
+++ b/styles/macos.css
@@ -401,7 +401,7 @@ body.prevent-background-scroll {
 
 .swiper-slide {
 	width: 260px;
-	height: 250px;
+	height: auto;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 	background: rgba(104, 104, 104, 0.5);
 	color: #fff;
